// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SellOffersService find all sell offers should return all sell offers 1`] = `
[
  {
    "auctionState": 1,
    "createdAt": {},
    "currentBid": 0,
    "tokenId": 0,
    "updatedAt": {},
    "userId": 0,
  },
]
`;

exports[`SellOffersService find all sell offers should return all sell offers 3`] = `
{
  "auctionState": 1,
  "createdAt": {},
  "currentBid": 0,
  "tokenId": 0,
  "updatedAt": {},
  "userId": 0,
}
`;

exports[`SellOffersService find offers owned by user should return all sell offers of the user 1`] = `
[
  {
    "auctionState": 1,
    "createdAt": {},
    "currentBid": 0,
    "tokenId": 0,
    "updatedAt": {},
    "userId": 0,
  },
  {
    "DeletedAt": {},
    "auctionState": 1,
    "createdAt": {},
    "currentBid": 0,
    "tokenId": 0,
    "updatedAt": {},
    "userId": 0,
  },
]
`;

exports[`SellOffersService find one sell offers should return the corresponding sell offer 1`] = `
{
  "auctionState": 1,
  "createdAt": {},
  "currentBid": 0,
  "tokenId": 0,
  "updatedAt": {},
  "userId": 0,
}
`;
